@@ -41,7 +41,7 @@
  # OF THE POSSIBILITY OF SUCH DAMAGE.
  # ====================================================================
  #
- # $Id: apache.py,v 1.31 2001/05/19 05:22:10 gtrubetskoy Exp $
+ # $Id: apache.py,v 1.32 2001/05/23 02:49:43 gtrubetskoy Exp $
 
 import sys
 import string
@@ -58,6 +58,10 @@ import _apache
 # variable stores the last PythonPath in raw (unevaled) form.
 _path = None
 
+# this is used in Request.__init__
+def _cleanup_request(_req):
+    _req._Request = None
+
 class Request:
     """ This is a normal Python Class that can be subclassed.
         However, most of its functionality comes from a built-in
@@ -68,6 +72,11 @@ class Request:
     def __init__(self, _req):
         # look at __setattr__ if changing this line!
         self._req = _req
+        
+        # this will decrement the reference to the _req
+        # object at cleanup time. If we don't do this, we
+        # get a cirular reference and _req never gets destroyed.
+        _req.register_cleanup(_cleanup_request, _req)
 
     def __getattr__(self, attr):
         try:
@@ -121,7 +130,7 @@ class CallBack:
         # is there a Request object for this request?
         if not _req._Request:
             _req._Request = Request(_req)
-
+            
         req = _req._Request
 
         # config
@@ -565,7 +574,7 @@ class CGIStdout(NullIO):
 
 def setup_cgi(req):
     """
-    Replace sys.stdin and stdout with an objects that reead/write to
+    Replace sys.stdin and stdout with an objects that read/write to
     the socket, as well as substitute the os.environ.
     Returns (environ, stdin, stdout) which you must save and then use
     with restore_nocgi().
